# qobuz-player

./: Cargo.toml  README.md  io.github.sofusa.qobine.json  justfile
.github/workflows/: pull-request.yml  release.yml  update-flatpak-sources.yml
.zed/: settings.json
cli-module/: Cargo.toml
cli-module/src/: lib.rs
connect-module/: Cargo.toml
connect-module/src/: lib.rs  main.rs
controls-module/: Cargo.toml
controls-module/src/: controls.rs  lib.rs  models.rs
controls-module/src/models/: mapper.rs
disconnect-module/: Cargo.toml  README.md
disconnect-module/src/: client.rs  lib.rs  main.rs
disconnect-server-module/: Cargo.toml
disconnect-server-module/src/: lib.rs  main.rs
flatpak/: io.github.sofusa.qobine.desktop  io.github.sofusa.qobine.metainfo.xml
gpio-module/: Cargo.toml
gpio-module/src/: gpio.rs
gtk-module/: Cargo.toml  README.md
gtk-module/src/: callbacks.rs  lib.rs  main.rs  ui.rs
mpris-module/: Cargo.toml
mpris-module/src/: lib.rs
player-module/: Cargo.toml
player-module/.sqlx/: query-3c3aee3d7831ac35d8e8a5cac4ac908aa7927334ace9d902d2c06a13a95d0a03.json  query-7e7d3a55aacd5e9a154e2d5d0c2c2f0a7e2752ad64bd3f6fc603cafd5478463d.json  query-cc48a93acc24529b648233c56f17864fe6c7b59e99bdbb9a062957f4148513f3.json
player-module/migrations/: 20260609115105_persist_disconnect.up.sql
player-module/src/: client.rs  database.rs  downloader.rs  error.rs  lib.rs  player.rs  sink.rs
qobuz-client/: Cargo.toml
qobuz-client/tests/: integration_test.rs
qobuz-player-cli/: Cargo.toml
qobuz-player-cli/src/: cli.rs  lib.rs
qobuz-player-client/src/: client.rs
qobuz-player-client/tests/: integration_test.rs
qobuz-player-controls/src/: client.rs  controls.rs  database.rs  downloader.rs  player.rs
qobuz-player-disconnect/: Cargo.toml
qobuz-player-disconnect-server/src/: lib.rs  main.rs
qobuz-player-disconnect/src/: client.rs  lib.rs  main.rs
qobuz-player-gtk/: Cargo.toml  README.md
qobuz-player-gtk/src/: lib.rs  main.rs  ui.rs
qobuz-player-mpris/src/: lib.rs
qobuz-player-player/.sqlx/: query-1d20363a05c6b4233a4bb3d050102d617593cd364a1babffe6bed91e5bbe943b.json  query-3aa51786db4d16294eac6729ca73fe0752cbceb8e6b8088e8e3414877f17d147.json  query-75718f77687d644d08e41cd56753a25cf4db0408e68686258e8addf0fd0ea438.json  query-7b9475117699191166137d3bc20e48eb72f2b67f1655b54ddd86735f8b205f76.json  query-9c5048df09d971895e4c17978ced71618e34de0173f494775156065b24c23a05.json
qobuz-player-player/src/: client.rs  database.rs  error.rs  player.rs  sink.rs
qobuz-player-rfid/src/: lib.rs  main.rs
qobuz-player-tui/src/: app.rs  discover.rs  favorites.rs  genres.rs  lib.rs  main.rs  popup.rs  preferences.rs  queue.rs  search.rs  ui.rs
qobuz-player-web/: package-lock.json  style.md
qobuz-player-web/assets/: script.js  styles.css  tailwind.css
qobuz-player-web/src/: app_state.rs  lib.rs  main.rs
qobuz-player-web/templates/: album-tracks.html  album.html  artist.html  base.html  (+15 more)
rfid-module/: Cargo.toml
tui-module/: Cargo.toml  README.md
web-module/: Cargo.toml  package-lock.json
(+74 files in other folders)
