[package]
name = "controls-module"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
qobuz-client = { version = "*", path = "../qobuz-client" }

tokio.workspace = true
serde.workspace = true
time.workspace = true
html-escape.workspace = true
